Fix #3277 "FB: Maximum attachment size field is too narrow and has label"

--- a/form-builder/jvm/src/main/assets/forms/orbeon/builder/resources/form-builder.less
+++ b/form-builder/jvm/src/main/assets/forms/orbeon/builder/resources/form-builder.less
@@ -492,8 +492,14 @@ div.orbeon.orbeon-portlet-div {
         width: 400px;
     }
 
+    // https://github.com/orbeon/orbeon-forms/issues/3277
+    // There shouldn't be an `.xforms-label-appearance-minimal` anyway if the `minimal label works.
+    .xbl-fr-grid .xbl-component .xforms-label-appearance-minimal {
+        display: none;
+    }
+
     .fb-dialog-control-details {
-        width: 900px;
+        width: 940px;
         max-width: none;
         .xforms-label { margin-top: 5px; }
 
